[gd_scene load_steps=20 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://addons/mixing-desk/music/mixing_desk_music.gd" type="Script" id=2]
[ext_resource path="res://addons/mixing-desk/music/mdm_icon.png" type="Texture" id=3]
[ext_resource path="res://addons/mixing-desk/music/song.gd" type="Script" id=4]
[ext_resource path="res://addons/mixing-desk/music/song_icon.png" type="Texture" id=5]
[ext_resource path="res://addons/mixing-desk/music/containers/core_cont.gd" type="Script" id=6]
[ext_resource path="res://audio/music/silence.wav" type="AudioStream" id=7]
[ext_resource path="res://addons/mixing-desk/music/containers/ran_cont.gd" type="Script" id=8]
[ext_resource path="res://audio/music/song1/ranperc_Bonk_1.ogg" type="AudioStream" id=9]
[ext_resource path="res://audio/music/song1/ranperc_Bonk_2.ogg" type="AudioStream" id=10]
[ext_resource path="res://audio/music/song1/ranperc_Clicks.ogg" type="AudioStream" id=11]
[ext_resource path="res://audio/music/song1/epiano.ogg" type="AudioStream" id=12]
[ext_resource path="res://audio/music/song1/epiano2.ogg" type="AudioStream" id=13]
[ext_resource path="res://audio/music/song1/arp.ogg" type="AudioStream" id=14]
[ext_resource path="res://audio/music/song1/spookpad.ogg" type="AudioStream" id=15]
[ext_resource path="res://addons/mixing-desk/music/containers/rollover_cont.gd" type="Script" id=16]
[ext_resource path="res://audio/music/rolls/rollover1.wav" type="AudioStream" id=17]
[ext_resource path="res://audio/music/rolls/rollover2.wav" type="AudioStream" id=18]
[ext_resource path="res://icon.png" type="Texture" id=19]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="MixingDeskMusic" type="Node" parent="."]
script = ExtResource( 2 )
__meta__ = {
"_editor_icon": ExtResource( 3 )
}

[node name="test" type="Node" parent="MixingDeskMusic"]
script = ExtResource( 4 )
__meta__ = {
"_editor_icon": ExtResource( 5 )
}
tempo = 120
bars = 4
beats_in_bar = 4
transition_beats = 2.0
loop = true

[node name="CoreContainer" type="Node" parent="MixingDeskMusic/test"]
editor/display_folded = true
script = ExtResource( 6 )
__meta__ = {
"_editor_icon": ExtResource( 5 )
}

[node name="silence" type="AudioStreamPlayer" parent="MixingDeskMusic/test/CoreContainer"]
stream = ExtResource( 7 )

[node name="RandomContainer" type="Node" parent="MixingDeskMusic/test"]
editor/display_folded = true
script = ExtResource( 8 )
__meta__ = {
"_editor_icon": ExtResource( 5 )
}
random_chance = 0.9

[node name="ranperc" type="AudioStreamPlayer" parent="MixingDeskMusic/test/RandomContainer"]
stream = ExtResource( 9 )

[node name="ranperc2" type="AudioStreamPlayer" parent="MixingDeskMusic/test/RandomContainer"]
stream = ExtResource( 10 )

[node name="ranperc3" type="AudioStreamPlayer" parent="MixingDeskMusic/test/RandomContainer"]
stream = ExtResource( 11 )

[node name="RandomContainer2" type="Node" parent="MixingDeskMusic/test"]
editor/display_folded = true
script = ExtResource( 8 )
__meta__ = {
"_editor_icon": ExtResource( 5 )
}
random_chance = 0.9

[node name="epiano1" type="AudioStreamPlayer" parent="MixingDeskMusic/test/RandomContainer2"]
stream = ExtResource( 12 )

[node name="epiano2" type="AudioStreamPlayer" parent="MixingDeskMusic/test/RandomContainer2"]
stream = ExtResource( 13 )

[node name="RandomContainer3" type="Node" parent="MixingDeskMusic/test"]
editor/display_folded = true
script = ExtResource( 8 )
__meta__ = {
"_editor_icon": ExtResource( 5 )
}
random_chance = 0.9

[node name="arp" type="AudioStreamPlayer" parent="MixingDeskMusic/test/RandomContainer3"]
stream = ExtResource( 14 )

[node name="pad" type="AudioStreamPlayer" parent="MixingDeskMusic/test/RandomContainer3"]
stream = ExtResource( 15 )

[node name="RolloverContainer" type="Node" parent="MixingDeskMusic/test"]
editor/display_folded = true
script = ExtResource( 16 )
__meta__ = {
"_editor_icon": ExtResource( 5 )
}
crossover_beat = 4

[node name="crash" type="AudioStreamPlayer" parent="MixingDeskMusic/test/RolloverContainer"]
stream = ExtResource( 17 )

[node name="snare" type="AudioStreamPlayer" parent="MixingDeskMusic/test/RolloverContainer"]
stream = ExtResource( 18 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 512, 288 )
texture = ExtResource( 19 )

[node name="bar_label" type="Label" parent="."]
margin_left = 454.0
margin_top = 417.0
margin_right = 494.0
margin_bottom = 431.0
rect_scale = Vector2( 3, 3 )
text = "BAR 1"

[node name="beat_label" type="Label" parent="."]
margin_left = 453.0
margin_top = 460.0
margin_right = 497.0
margin_bottom = 474.0
rect_scale = Vector2( 3, 3 )
text = "BEAT 1"
[connection signal="bar" from="MixingDeskMusic" to="." method="_on_MixingDeskMusic_bar"]
[connection signal="beat" from="MixingDeskMusic" to="." method="_on_MixingDeskMusic_beat"]
